correction of delete client annotation
